@startuml classe

'skinparam classAttributeIconSize 0
'hide circle

abstract Usuario <<abstract>>{
    - id: int
    - nome: String
    - email: String
    - senha: String
    - endereco: Endereco
    - cpf: String
    - rg: String
    - cnpj: string
    - endereco: String
    + Usuario(nome: String, email: String, senha: String, endereco: Endereco)
    + Usuario(email: String, senha: String)
    + registrar(): void
    + autenticar(): void
    
}


class Instituicao {
    - MOEDAS_POR_SEMESTRE: int = 1000
    + cadastrarProfessores(List<Professor>): void
    + distribuirMoedas(moedas: int): void
    + distribuirMoedas(moedas: int, professor: Professor): void
}


class Aluno {
    - semestre: int
}

class Professor {
    - departamento: String
}

class Empresa {
    + cadastrarVantagem(nome: String, descricao: String, foto: String, custo: int): void
}

class Transacao {
    - data: Date
    - valor: int
    - remetente_id: long
    - destinatario_id: long
    + Transacao(remetente: Usuario, destinatario: Usuario, valor: int)
    + relatorio(): String
}

class ResgateVantagem{
    - data: LocalDateTime
}
class Extrato {
    - saldo: int
    - transacoes: List<Transacao>
    + relatorio(): String
}

class Vantagem {
    - nome: String
    - descricao: String
    - foto: String
    - custo: int
    - ativa: boolean
    + Vantagem(nome: String, descricao: String, foto: String, custo: int)
    + resgatar(): void
}

class Email {
    - remetente: String
    - destinatario: String
    - assunto: String
    - conteudo: String
    + Email(remetente: String, destinatario: String, assunto: String, conteudo:String):void
    + enviar(): void
}

class Carteira {
    - saldo: int
    + consultarExtrato(): Extrato
    - descontarSaldo(valor: int): void
    + totalMoedas(): int
    + trocarMoedas(vantagem: Vantagem): void
    + transferir(professor: Professor, aluno: Aluno, valor: double, motivo: String): void
}

class Cupom {
    - codigo: String
}

'Relacionamento Usuario

Usuario <|-- Aluno
Usuario <|-- Professor
Usuario <|-- Empresa
Usuario <|-- Instituicao

'Relacionamento Instituicao
Instituicao "1" o-- "*" Professor
Instituicao <-- Aluno

'Relacionamento CarteiraAluno
Carteira "1" <-- "1" Usuario


'Relacionamento CarteiraProfessor

'Relacionamento Carteira
Carteira  o--  Transacao
Carteira o-- ResgateVantagem

'Relacionamento ResgateVantagem
ResgateVantagem --> Cupom
ResgateVantagem -->Vantagem

'Relacionamento Empresa
Empresa "1" o--> "*" Vantagem

'Ajuste do diagrama
Email -[hidden]->Usuario

@enduml